@@ -408,6 +408,11 @@ The :mod:`signal` module defines the following functions:
 
    .. versionadded:: 3.3
 
+   .. versionchanged:: 3.5
+      The function is now retried if interrupted by a signal not in *sigset*
+      and the signal handler does not raise an exception (see :pep:`475` for
+      the rationale).
+
 
 .. function:: sigtimedwait(sigset, timeout)
 
@@ -421,6 +426,11 @@ The :mod:`signal` module defines the following functions:
    See also :func:`pause`, :func:`sigwait` and :func:`sigwaitinfo`.
 
    .. versionadded:: 3.3
+
+   .. versionchanged:: 3.5
+      The function is now retried with the recomputed timeout if interrupted by
+      a signal not in *sigset* and the signal handler does not raise an
+      exception (see :pep:`475` for the rationale).
 
 
 .. _signal-example:
